fix menu spacing (#978)
* fix menu spacing

* fix relative links in HTML files

* fix relative links in HTML files

--- a/docs/docs/components/page/demo-page.css
+++ b/docs/docs/components/page/demo-page.css
@@ -14,7 +14,7 @@ wa-page {
   }
 }
 
-:is([slot='banner'], [slot='header'], [slot='subheader'], [slot='footer'], [slot*='navigation']) {
+:is([slot='banner'], [slot='header'], [slot='subheader'], [slot='footer'], [slot*='navigation'], [slot='menu']) {
   margin-inline-start: var(--wa-space-xs);
 }
 
